--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "axios": "^0.21.1",
     "cheerio": "^1.0.0-rc.5",
     "commander": "^7.0.0",
-    "debug": "^4.3.1"
+    "debug": "^4.3.1",
+    "listr": "^0.14.3"
   }
 }
